[package]
name = "text_layout_job"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "text_layout_job_lib"
crate-type = ["cdylib", "rlib"]


[dependencies]
eframe = "0.15.0" # Gives us egui, epi and web+native backends
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm


#[[bin]]
#name = "text_layout_job_output"


